added better notify me birthday notification message